--- a/Aula 13/Ex016.html
+++ b/Aula 13/Ex016.html
@@ -41,16 +41,12 @@
             margin-bottom: 20px;
             margin: 20px auto;
             background-color: cornsilk;
-            
         }
-        
     </style>
-
 </head>
 
-
 <header>
-    <h1> Exercício 1</h1>
+    <h1> Exercício While </h1>
 </header>
 
 <body>
