--- a/Exercicios/ex016.html
+++ b/Exercicios/ex016.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 16</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <header>
@@ -16,12 +16,47 @@
 <body>
     <section>
         <div>
-            div 1
+            <form>
+                <fieldset>
+                    <legend>Entradas</legend>
+                    <div class="form-group">
+                        <label for="vinic"> Valor Inícial:</label>
+                        <input type="text" id="vinic" maxlength="5" size="5" />
+                    </div>
+                    <div class="form-group">
+                        <label for="vfim">Valor Final: </label>
+                        <input type="text" id="vfim" size="5" maxlength="5" />
+                    </div>
+                    <div class="form-group">
+                        <label for="vpasso">Passo:</label>
+                        <input type="number" id="vpasso" size="2" min="0" max="99" maxlength="2" />
+                        <button type="button" onclick="executa()">Contar</button>
+                        <button type="reset">Cancela</button>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Resultado</legend>
+                    <input type="text" id="res" size="20">
+                </fieldset>
+            </form>
         </div>
-        <div>
-            div 2 
-        </div>
+
     </section>
+
+    <script>
+
+        function executa() {
+
+            var ini = document.getElementById("vinic").value
+            var fim = document.getElementById("vfim").value
+            var pace = document.getElementById("vpasso").value
+
+            document.getElementById("res").value =  parseInt(ini/fim)
+
+        }
+
+    </script>
+
 </body>
 
 <footer>
