--- a/aula6/ex003inputfield.html
+++ b/aula6/ex003inputfield.html
@@ -19,7 +19,7 @@
 
 <h2>Projeto Enviar</h2>
 
-<form method="POST" id="fContato" oninput="calc_total()"> 
+<form id="fContato" oninput="calc_total()"> 
         
     <fieldset id="Num">
         <legend>Conversão de Numeros</legend>
