--- a/Exercicios/ex017.html
+++ b/Exercicios/ex017.html
@@ -4,24 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 17</title>
+    <title>Exercício 16</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 
 <header>
-    <h1> Tabuada </h1>
+    <h1> Vamos Contar </h1>
 </header>
 
 <body>
     <section>
         <div>
-            div 1
+            <form>
+                <fieldset>
+                    <legend>Tabuada</legend>
+                    <div class="form-group">
+                        <label for="vinic"> Tabuada </label>
+                        <input type="number" id="vinic" maxlength="5" size="5" />
+                    </div>
+
+                    <div class="form-group">
+                        <button type="button" onclick="executa()"> Contar </button>
+                        <button type="reset">Cancela</button>
+                    </div>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Resultado</legend>
+                    <div id="res">
+                    </div>
+                </fieldset>
+
+
+            </form>
         </div>
-        <div>
-            div 2 
-        </div>
+
     </section>
+
+    <script>
+
+        function executa() {         
+
+            var prod = Number(vinic.value)  
+
+            res.innerHTML = ""
+            for (i = 1; i < 11; i++) {
+                res.innerHTML +=  prod + " x " + i + " - " + i*prod + "<br>";
+                }
+            }
+
+    </script>
+
 </body>
 
 <footer>
