Criado prj teste
inclui linhas automaticamente em uma tabela

--- a/testes/inserindolinhastabela.html
+++ b/testes/inserindolinhastabela.html
@@ -37,15 +37,23 @@
 
 <body>
         <!-- Tabela simples contendo linhas e colunas -->
-        <p>Cria tabela</p>
-        <table id="minhaTabela" border="1" style="overflow: auto;" >
+        <table id="minhaTabela" border="1">
             <tr>
                 <td>
-                    Linha 0 - Resultado 0
+                    Linha 0 - Coluna 0
                 </td>
-
+                <td>
+                    Linha 0 - Coluna 1
+                </td>
             </tr>
-
+            <tr>
+                <td>
+                    Linha 1 - Coluna 0
+                </td>
+                <td>
+                    Linha 1 - Coluna 1
+                </td>
+            </tr>
         </table>
 
         <!-- Este botão quando acionado irá chamar a função responsável em inserir a linha na tabela -->
