--- a/Exercicios/ex017.html
+++ b/Exercicios/ex017.html
@@ -43,15 +43,22 @@
 
     <script>
 
-        function executa() {         
-
-            var prod = Number(vinic.value)  
-
+        function executa() {
+            var prod = Number(vinic.value)
             res.innerHTML = ""
             for (i = 1; i < 11; i++) {
-                res.innerHTML +=  prod + " x " + i + " - " + i*prod + "<br>";
-                }
+                res.innerHTML += prod + " x " + i + " - " + i * prod + "<br>";
             }
+        }
+
+
+        function update() {
+            var select = document.getElementById('language');
+            var option = select.options[select.selectedIndex];
+
+            document.getElementById('value').value = option.value;
+            document.getElementById('text').value = option.text;
+        }
 
     </script>
 
