--- a/Aula14Ex/ex017.html
+++ b/Aula14Ex/ex017.html
@@ -4,8 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 16</title>
+    <title>Exercício 17 - Tabuada</title>
     <link rel="stylesheet" href="style.css">
+
+    <script>
+        
+        function executa() {
+
+            var prod = Number(vinic.value)
+
+            var tab = document.getElementById('seltab')
+
+            var c = 1
+
+            if (prod == 0) {
+                alert("Valor tem que ser diferente de zero")
+                return
+            }
+
+            tab.innerText = " "
+            while (c <= 100) {
+                var item = document.createElement('option') // motando o select
+                item.text = ` ${prod} * ${c} = ${prod * c} `
+                tab.appendChild(item)
+                c++
+            }
+        }
+    </script>
+
 </head>
 
 <header>
@@ -25,42 +51,20 @@
 
                     <div class="form-group">
                         <button type="button" onclick="executa()"> Contar </button>
-                        <button type="reset">Cancela</button>
-                    </div>
+                   </div>
                 </fieldset>
 
-                <fieldset>
-                    <legend>Resultado</legend>
-                    <div id="res">
-                    </div>
-                </fieldset>
-
+                <!-- size = 10 evita ter que clicar para abrir -->
+                <Select id="seltab" size="10">
+                    <option> Tabuada </option>
+                </Select>
 
             </form>
         </div>
 
     </section>
 
-    <script>
 
-        function executa() {
-            var prod = Number(vinic.value)
-            res.innerHTML = ""
-            for (i = 1; i < 11; i++) {
-                res.innerHTML += prod + " x " + i + " - " + i * prod + "<br>";
-            }
-        }
-
-
-        function update() {
-            var select = document.getElementById('language');
-            var option = select.options[select.selectedIndex];
-
-            document.getElementById('value').value = option.value;
-            document.getElementById('text').value = option.text;
-        }
-
-    </script>
 
 </body>
 
