Curso do Gustavo
Curso do Gustavo

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -1,54 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
-    <!-- Head - Cabeça */ -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Word!</title>
-    <!--Título do Programa -->
-    <style>
-        <!-- CSS 
-        -->
-        body {
-        background-color:
-        rgb(0,
-        47,
-        255);
-        color:
-        cornsilk;
-        font-size:
-        20;
-        }
-        H1 {
-            color:
-        rgb(226,
-        147,
-        147);
-        }
-        //define
-        a
-        cor
-        do
-        H1
-    </style>
+    <title>Document</title>
 </head>
-
 <body>
-    <!-- Corpo -->
-    <h1> <b>Olá, mundo! </b> </h1> <!-- Parte HTML -->
-
-    <br/>
-    <h4>Já me livrei da maldição</h4>
-
-    <script>   
-            // window.alert("Minha primeira mensagem") /*Apenas um Ok */
-            // window.confirm("Está gostando do JS?")  /* Guardar a resposta */
-            let cNome = window.prompt("Qual é seu nome?") /* isso pode ser um comentário de mais de uma linha */
-            let cSalario = window.prompt("Salario")
-            document.write("Nome: "+cNome+"  - Salário: "+cSalario);
-    </script>
-
+    <p>Atualizando o GIT com pau</p>
 </body>
-
 </html>
