Conclusão Ex_aula17.html
Este Exercício final do curso de JavaScript Básico ilustra as seguintes features:

    - Utilização de Arrays
    - QuerySelector
    - TextArea
    - Pular linha em JS
    - Duração de variáveis

    @wrico

--- a/Aula 17/Ex_aula_17.html
+++ b/Aula 17/Ex_aula_17.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Este Exercício final do curso de JavaScript Básico ilustra as seguintes features:
+   
+    - Utilização de Arrays
+    - QuerySelector
+    - TextArea
+    - Pular linha em JS
+    - Duração de variáveis
 
+    @wrico 
+
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
