--- a/Projetos/select-uso.html
+++ b/Projetos/select-uso.html
@@ -56,7 +56,7 @@
                 </fieldset>
 
                 <!-- size = 10 evita ter que clicar para abrir -->
-                <Select id="seltab" size="10">
+                <Select id="seltab" size="10" style="width: 150px; height: 150px;" >
                     Tabuada
                 </Select>
 
