--- a/Projetos/arrow_fct_this.html
+++ b/Projetos/arrow_fct_this.html
@@ -40,10 +40,10 @@
         <table id="tab" border="1">
             <thead>
                 <tr>
-                    <th>titulo 1</th>
-                    <th>titulo 2</th>
-                    <th>titulo 3</th>
-                    <th>titulo 4</th>
+                    <th>Índice</th>
+                    <th>Número</th>
+                    <th>Valor</th>
+                    <th>Resultado</th>
                 </tr>
             </thead>
             <tbody>
