--- a/Projetos/relogiogrande.html
+++ b/Projetos/relogiogrande.html
@@ -1,6 +1,13 @@
 <html>
 
 <head>
+
+    <head>
+        <meta charset="pt-br">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Data e Hora</title>
+    </head>
+
     <style>
         header {
             margin-top: 20px;
@@ -77,7 +84,8 @@
             margin-right: 60px;
             box-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
             display: flex;
-            justify-content: space-between;  /*  automaticamente centraliza os componentes dando espaço */
+            justify-content: space-between;
+            /*  automaticamente centraliza os componentes dando espaço */
         }
 
         section#esq {
@@ -122,13 +130,13 @@
             decs = checkTime(decs)
             t = setTimeout('startTime()', 500)
 
-            document.getElementById('nHora').innerText = h
-            document.getElementById('nMin').innerText = m
+            document.getElementById('nHora').innerText = h 
+             document.getElementById('nMin').innerText = m
             document.getElementById('nSec').innerText = s
 
             document.getElementById('nDia').innerText = dia
             document.getElementById('nMes').innerText = mes
-            document.getElementById('nAno').innerText = ano
+            document.getElementById('nAno').innerText = ano 
 
             setInterval(function () {
                 decs = Math.floor(new Date().getTime() % 1000 / 10)
