--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiro Programa</title>
 </head>
 <body>
-    <p>Atualizando o GIT com pau</p>
+    <h1>Olá Mundo!</h1>
 </body>
 </html>
