--- a/aula6/ex003Senha.html
+++ b/aula6/ex003Senha.html
@@ -8,7 +8,7 @@
     <![endif]-->
 
     <style>
-        #area {
+        .area {
             position: relative;
             left: 37%;
             top: 10em;
@@ -72,7 +72,7 @@
 </head>
 
 <body>
-    <div id="area">
+    <div class="area">
         <form id="formulario" autocomplete="off">
             <fieldset>
                 <legend>Formulário</legend>
